--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
+    "react-twilio": "^0.0.4",
     "twilio": "^3.84.1"
   }
 }
