--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
     "react-twilio": "^0.0.4",
+    "swiper": "^8.4.6",
     "twilio": "^3.84.1"
   }
 }
